fix vivid theme logo covering menu buttons on very small resolutions

--- a/src/main/resources/static/styles/vivid.scss
+++ b/src/main/resources/static/styles/vivid.scss
@@ -284,10 +284,6 @@ a {
   text-shadow: $logo-text-shadow;
   padding-left: 5%;
   padding-right: 5%;
-  margin-bottom: -100px;
-  padding-bottom: 100px;
-  margin-top: -100px;
-  padding-top: 100px;
   filter: brightness(2) drop-shadow($logo-filter-drop-shadow);
 }
 
